remove p2p and transaction pool stuff since it isn't working refactor some things to work with 24.3 interface changes
Signed-off-by: garyschulte <garyschulte@gmail.com>